Fixed bugs with color and medium buttons. Reduced spacing in the about section

--- a/src/scss/blocks/_about.scss
+++ b/src/scss/blocks/_about.scss
@@ -76,8 +76,9 @@
             column-gap: 15px;
         }
         @include mobile {
+            margin-top: 15px;
             grid-template-columns: repeat(2, 1fr);
-            gap: 10px;
+            gap: 15px;
         }
         @include small-mobile {
             grid-template-columns: 325px;
