--- a/src/scss/blocks/_buttons.scss
+++ b/src/scss/blocks/_buttons.scss
@@ -34,5 +34,8 @@
         height: 32px;
         padding: 5px;
         font-size: 16px;
+        @include mobile {
+            font-size: 14px;
+        }
     }
 }
